# tor2tor

./: Dockerfile  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh  update.ps1  update.sh
.github/: FUNDING.yml
.github/workflows/: codeql.yml  docker-publish.yml
tor2tor/: __init__.py  config.py  coreutils.py  main.py  tor2tor.py
tor2tor/data/: settings.json
tor2tor/settings/: settings.json
