[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tor2tor"]

[project]
name = "tor2tor"
version = "0.8.0"
description = "Capture screenshots of onion services on an onion service."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Richard Mwewa", email = "rly0nheart@duck.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "rich",
    "requests",
    "selenium",
    "BeautifulSoup4",
]

[project.urls]
homepage = "https://hub.docker.com/r/rly0nheart/tor2tor"
documentation = "https://github.com/rly0nheart/tor2tor/blob/latest/README.md"
repository = "https://github.com/rly0nheart/tor2tor"

[project.scripts]
t2t = "tor2tor.tor2tor:start_capturing"
tor2tor = "tor2tor.tor2tor:start_capturing"
