[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tor2tor"
version = "0.13.0"
description = "Capture screenshots of onion services on an onion service."
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://hub.docker.com/r/rly0nheart/tor2tor"
repository = "https://github.com/rly0nheart/tor2tor"
documentation = "https://github.com/rly0nheart/tor2tor/blob/latest/README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "*"
requests = "*"
rich-argparse = "*"
selenium = "*"
BeautifulSoup4 = "*"

[tool.poetry.scripts]
t2t = "tor2tor.main:execute_tor2tor"
tor2tor = "tor2tor.main:execute_tor2tor"
